--- a/WEB/HOMEWORK3/style.css
+++ b/WEB/HOMEWORK3/style.css
@@ -1,19 +1,22 @@
 *{
     padding: 10px;
-    margin: 20px 0;
+    margin: 0;
     box-sizing: border-box;
 }
 
 #main {
     font-size: 32px;
+    font-weight: 600;
 }
 
 p{
+    margin: 20px 0;
     background-color: black;
     color: #fff;
 }
 
 #main > div {
+    margin: 20px 0;
     background-color: yellow;
 }
 
@@ -28,6 +31,7 @@ ul li {
 }
 
 h2{
+    margin: 20px 0;
     font-size: 48px;
     color: blue;
 }
